lie-py.h

/* needed in gc.c */
extern void **ptr;
void c_print_objs(void);
/******* from static1.c *******/

extern long chunks;
/*void error_unequal(entry a,entry b);*/           /* not needed */
vector* vec_min_vec(vector* a);                    /* implemented */
/*object vec_not_vec(vector* a);*/                 /* not needed */
matrix* mat_min_mat(matrix* a);                    /* implemented */
/*entry imod(entry x,entry n);*/                   /* not needed */
vector* vec_mod_vec_int(vector* a, entry b);       /* implemented */
matrix* mat_div_mat_int(matrix* a, entry b);       /* implemented */
matrix* mat_mod_mat_int(matrix* a, entry b);       /* implemented */
/*object bin_pow_bin_bin(object a, object b);*/    /* not needed */
/*object pol_pow_pol_bin(object a, object b);*/    /* not needed */
vector* vec_mul_int_vec(long a, vector *b);        /* implemented */
vector* vec_div_vec_int(vector* a, long b);        /* implemented */
vector* vec_mul_mat_vec(matrix *a, vector *b);     /* implemented */
vector* vec_mul_vec_mat(vector *v, matrix *m);     /* implemented */
vector* vec_append_vec_vec(vector *v, vector *w);  /* implemented */
matrix* mat_mul_mat_mat(matrix *a, matrix *b);     /* implemented */
poly* pol_mul_pol_mat(poly *a, matrix *b);         /* implemented */
/*matrix* mat_id(index size);*/                    /* implemented - static/static1.c */
/*object mat_pow_mat_bin(object a, object b);*/    /* not needed */
matrix* mat_append_mat_mat(matrix* a, matrix* b);  /* implemented */
matrix* mat_transpose_mat(matrix *a);              /* implemented */
index int_mul_vec_vec(vector *a, vector *b);       /* implemented */
/*object vec_add_vec_vec(object v, object w);*/    /* implemented - static/static1.c */
/*object mat_add_mat_vec(object a, object v);*/    /* implemented - static/static1.c */
object mat_sub_mat_int(object a, entry obj_k);     /* implemented */
vector* vec_dif_vec_vec(vector *a, vector *b);     /* implemented */
/*object mat_add_mat_mat(object a, object b);*/    /* implemented */
matrix* mat_sub_mat_mat(matrix *a, matrix *b);     /* implemented */
matrix* mat_mul_int_mat(entry a, matrix *b);       /* implemented */
/*object int_siz_vec(object a);*/                  /* accessed directly */
/*object int_rowsiz_mat(object a);*/               /* accessed directly */
/*object int_colsiz_mat(object a);*/               /* accessed directly */
/*object int_n_vars_pol(object p);*/               /* accessed directly */
/*object mat_null_int_int(object m_obj,object n_obj);*/ /* not needed */
/*object mat_one_int_int(object m_obj, object n_obj);*/ /* not needed */
/*object pol_null_int(intcel *r);*/                     /* not needed */
/*object pol_one_int(intcel *r);*/                      /* not needed */
/*object mat_unit_int(intcel* nn);*/                    /* not needed */
/*object vec_unit_int_int(intcel* nn, intcel* ii);*/    /* not needed */
/*object vec_null_int(intcel* nn);*/                    /* not needed */
/*object vec_one_int(intcel* nn);*/                     /* not needed */

/******* from static2.c ********/

/* Boolean operations */
/*object Int_search_mat_vec(matrix* m,vector* v,index low,index up);*/
/*object int_and_int_int(symblst a);*/
/*object int_or_int_int(symblst a);*/
/*object int_not_int(object a);*/
object int_eq_mat_mat(object a, object b);           /* implemented */
object int_eq_pol_pol(object a, object b);           /* implemented */
object int_ne_mat_mat(object a, object b);           /* implemented */
object int_ne_pol_pol(object a, object b);           /* implemented */
object int_eq_vec_vec(object a, object b);           /* implemented */
object int_ne_vec_vec(object a, object b);           /* implemented */
/*object vec_addelm_vec_int(object a, object b);*/
object vec_startaddelm_int_vec(entry a, object b);   /*** TODO ***/
object vec_subelm_vec_int(object a, entry b);        /* implemented */
/*object int_select_vec_int(vector *t, entry n);*/   /* not needed */
object vec_select_mat_int(object m, entry indexobj); /* implemented */
/*object pol_select_pol_int(poly *m, entry indexobj);*/  /* not needed */
object vec_select_pol_int(poly *m, entry indexobj);  /* implemented */
object bin_select_pol_vec(poly *p, vector *v);       /* implemented */
object Int_search_mat_vec(matrix* m, vector* v, index low, index up);
object int_search_mat_vec(matrix *m, vector *v);
object int_search_mat_vec_int_int(matrix *m, vector *v, entry up, entry low);
object int_select_mat_int_int(matrix *m, entry n1, entry n2);
/*object int_used();*/
/*object arg_break_arg(object a);*/
/*object arg_return_arg(object a);*/
/*object vid_break();*/
/*object vid_return();*/
/*object apply(symblst funsym);*/
/*object vec_apply_int_int(symblst funsym);*/
object vec_join_mat(object a);                       /*** TODO ***/
object vec_diag_mat(object a);                       /* implemented */
poly* pol_monom_vec(vector *v);                      /* implemented */
/*object pol_polynom_bin_mat(object p, bigint* d);*/ /* not needed */
poly* pol_polynom_mat(matrix* p);                    /* implemented */
/*poly* pol_polynom_bin(bigint *k);*/                /* pol_polynom_int instead */
poly* pol_polynom_int(entry k);                      /* implemented */
matrix* mat_polynom_pol(poly *p);                    /* implemented */
object pol_polynom_bin_vec(bigint* d, vector* v);    /* implemented */
object pol_polynom_vec(vector *v);                   /* implemented */
/*object pol_polynom_bin_int(bigint *d, entry k);*/  /* not needed */
/*object pol_polynom_one_int(entry k);*/             /* not needed */
/*object bin_coef_pol_int(poly *p, entry k);*/       /* accessed directly */
object pol_min_pol(poly	*a);                         /* not needed */
/*object pol_add_pol_pol (object a, object b);*/     /* replaced by Add_pol_pol */
/*object pol_sub_pol_pol (object a, object b);*/     /* replaced by Add_pol_pol */
/*object pol_mul_bin_pol(object a, object b);*/      /* replaced by Mul_bin_pol */
/*object pol_mul_pol_int(object a, entry b);*/       /* replaced by Mul_bin_pol */
/*object pol_div_pol_bin(object a, object b);*/      /* replaced by Div_pol_bin */
/*object pol_div_pol_vec(object a, object b);*/      /* replaced by Div_pol_vec */
/*object pol_mod_pol_bin(object a, object b);*/      /* replaced by Mod_pol_bin */
/*object pol_mod_pol_vec(object a, object b);*/      /* replaced by Mod_pol_vec */
/*object pol_mul_pol_pol(object a, object b);*/      /* replaced by Mul_pol_pol */
/*object int_deg_pol(object p);*/                    /* replaced by Degree_pol */
/*object int_len_pol(object p);*/                    /* not needed */
/*object int_len_tek(tekst *t);*/                    /* not needed */
object pol_atensor_pol_pol(object p1, object p2);    /* implemented */
/*void rank_of_group_okay(group* g);*/               /* not needed */
object tex_maxsub_grp(group *g);                     /* implemented */
group* create_group(string s);                       /* implemented */
object grp_maxsub_grp_int(group *g, entry nobj);     /* implemented */
object mat_resmat_grp_grp(group *g1, group *g2);     /* implemented */
object mat_resmat_grp_int_grp(group *g1,entry d, group *g2); /* implemented */
/******** from error.c *******/
/*void error(char *format, ...);*/ /* already in lie.h */


/******** from mem.c *******/
void setpyobj(object obj);
void clrpyobj(object obj);