LiE/ansi.h

bigint* str2bigint(string s);
string bigint2str(bigint* num);
void error(char* format, ...)    /*  __attribute__ ((noreturn))*/
                                   __attribute__ ((format (printf,1,2)));
void fatal(char* format, ...)      __attribute__ ((noreturn))
                                   __attribute__ ((format (printf,1,2)));
int Printf(char* format, ...)      __attribute__ ((format (printf,1,2)));
void err_Printf(char* format, ...) __attribute__ ((format (printf,1,2)));
void monprintf(char* format, ...)  __attribute__ ((format (printf,1,2)));
void error(char* format, ...);
char* grp2str(group* grp);
/* poly.c */
poly* Add_pol_pol(poly* a, poly* b, int sign);
entry Degree_pol(poly* p);
poly* Mul_bin_pol(bigint* a, poly* b);
poly* Mul_pol_pol(poly* a, poly* b);
poly* Div_pol_bin(poly* a, bigint* b);
poly* Div_pol_vec(poly* a, vector* b);
poly* Mod_pol_bin(poly* a, bigint* b);
poly* Mod_pol_vec(poly* a, vector* b);
/* box/diagram.c */
object Diagram(object grp);
/* box/matrix.c */
void copyrow(entry* v,entry* w,index n); /* ubiquitous, as are following: */
void addrow(entry* v,entry* w,entry* x,index n);
void subrow(entry* v,entry* w,entry* x,index n);
boolean pos_subrow(entry* v,entry* w,entry* x,index n);
matrix* Transpose(matrix* m); /* static1.c */
matrix* extendmat(matrix* old);
matrix* copymatrix(matrix* old);
poly* Reduce_pol(poly* p);
matrix* mat_id(entry size);
object mat_add_mat_vec(object m, object v);
object mat_add_mat_mat(object m, object v);
object vec_add_vec_vec(object m, object v);
/* static/static2.c */
object vec_addelm_vec_int(object v, object i);
object int_eq_grp_grp(object g,object h); /* used in decomp */