LiE/memtype.h

typedef unsigned short objtype;
typedef unsigned short reftype;
typedef struct
{
  
  objtype type; reftype nref;

  entry intval;
} intcel;
typedef struct
{
  
  objtype type; reftype nref;

  short allocsize, size;
  digit *data;
} bigint;
typedef struct
{
  
  objtype type; reftype nref;

  index ncomp;
  index size;
  entry *compon;
} vector;
typedef struct
{
  
  objtype type; reftype nref;

  index nrows, ncols;
  index rowsize;
  entry **elm;
  bigint **null;
} matrix;
typedef struct
{
  
  objtype type; reftype nref;

  index nrows, ncols;
  index rowsize;
  entry **elm;
  bigint **coef;
} poly;
typedef struct simpgrp_struct simpgrp;
struct simpgrp_struct
{
  
  objtype type; reftype nref;

  char lietype;
  entry lierank;
  matrix* cartan,* icartan,* roots;
  vector* exponents,* level,* root_norm;
  simpgrp* nextgrp;
};
typedef struct
{
  
  objtype type; reftype nref;

  index ncomp, toraldim;
  simpgrp **liecomp;
} group;
typedef struct
{
  
  objtype type; reftype nref;

  index len;
  char *string;
} tekst;
typedef union {
  struct { 
           objtype type; reftype nref;
  } any;
  intcel i;
  bigint b;
  vector v;
  matrix m;
  poly	 pl;
  simpgrp s;
  group g;
  tekst	 t;
} objcel, *object;