lie.pyx

from fractions import Fraction, gcd
from functools import reduce
import signal

cdef extern from "lie-py.h":

    # from Python.h
    object PyLong_FromString(char *str, char **pend, int base)

    # from error.c, replacing output.c
    void error(char *format, ...)

    # from lie.h

    ctypedef long index
    ctypedef long entry
    ctypedef int boolean
    ctypedef int cmp_tp
    ctypedef cmp_tp (*cmpfn_tp) (entry*,entry*,index)
    ctypedef char* string
    
    # memtype.h
    ctypedef unsigned short objtype
    ctypedef unsigned short reftype
    ctypedef struct intcel:
        entry intval
    ctypedef struct bigint:
        pass
    ctypedef struct vector:
        index ncomp
        entry *compon
    ctypedef struct matrix:
        index nrows
        index ncols
        entry **elm
    ctypedef struct poly:
        index nrows
        index ncols
        entry **elm
        bigint **coef
        
    ctypedef struct simpgrp_struct:
        pass
    ctypedef simpgrp_struct simpgrp
    ctypedef struct group:
        index ncomp, toraldim
        simpgrp **liecomp
    ctypedef struct tekst:
        char *string

    cdef struct any_struct:
        objtype type
        reftype nref
    ctypedef union objcel:
        any_struct any
    ctypedef objcel *lieobj "object"

    extern unsigned long  maxnodes, maxptrs, gccrit, maxenters, maxlabels

    # from gc.c, replacing gc() in mem.c
    void simple_gc()
    void c_print_objs()
    void gc_print_obj(lieobj o)


    # nodetype.h
    ctypedef unsigned int strtype
    cdef struct labelrec:
        strtype name
        int line
        char *fname
    ctypedef labelrec *labeltp
    labeltp label_null
    labeltp label

    # mem.h
    void **ptr
    group* mkgroup(index ncomp)
    vector* mkvector(index n)
    matrix* mkmatrix(index r, index c)
    poly* mkpoly(index r,index c)
    # actually macros
    void setshared(lieobj x)
    void clrshared(lieobj x)
    int islonglife(lieobj x)
    int issorted(lieobj x)
    void freem(void* x)
    void freemem(lieobj x)
    void freepol(poly* p)
    void LiE_gc "gc" ()

    # lie-py extensions
    void setpyobj(lieobj x)
    void clrpyobj(lieobj x)

    # main.h
    int redirected_input # actually a bool
    labeltp label

    # init.h
    intcel* bool_false
    intcel* bool_true
    poly* poly_null(index r)
    void init()

    # grpdata.h
    boolean simpgroup(lieobj g)
    vector* Simproot_norms(lieobj grp)
    index Lierank(lieobj grp)
    vector* Exponents(lieobj grp)
    index Numproots(lieobj grp)
    
    entry Dimgrp(lieobj grp)
    matrix* Center(lieobj grp)
    
    #index find_root(entry* alpha, entry level, simpgrp* g)
    
    # symg.h
    bigint* n_tableaux(entry* lam, index l)
    bigint* Classord(entry* kappa, index l)
    index check_part(entry* lam, index l)
    vector* check_tabl(vector* v)
    boolean Nextperm(entry* w, index n)
    boolean Nextpart(entry* lam, index l)
    boolean Nexttableau(entry* t, index n)
    matrix* Permutations(entry* v,index n)
    matrix* Partitions(index n)
    matrix* Tableaux(entry* lam, index l)
    vector* Trans_part(entry* lam, index l)
    entry Sign_part(entry* lam, index l)
    void Robinson_Schensted (entry* P, entry* Q, index n, entry* sigma)
    void Schensted_Robinson (entry* sigma, index n, entry* P, entry* Q)
    poly* MN_char(entry* lam, index l)
    bigint* MN_char_val(entry* lam, entry* mu, index l, index m)
    
    # weylloop.h
    void Weylloopinit(simpgrp* g)
    void Weylloop(void (*action)(entry*),entry* v)
    void Weylloopexit()

    # /* print.c */ from ansi.h
    char* grp2str(group* grp)

    # poly.c from ansi.h
    poly* Add_pol_pol(poly* a, poly* b, int sign)
    entry Degree_pol(poly* p)
    poly* Mul_bin_pol(bigint* a, poly* b)
    poly* Mul_pol_pol(poly* a, poly* b)
    poly* Div_pol_bin(poly* a, bigint* b)
    poly* Div_pol_vec(poly* a, vector* b)
    poly* Mod_pol_bin(poly* a, bigint* b)
    poly* Mod_pol_vec(poly* a, vector* b)
    
    # ansi.h
    # bigints
    bigint* str2bigint(string s)
    string bigint2str(bigint* num)

    # /* box/diagram.c */
    lieobj Diagram(lieobj grp)
    
    # /* box/matrix.c */
    void copyrow(entry* v,entry* w,index n) # /* ubiquitous, as are following: */
    #void addrow(entry* v,entry* w,entry* x,index n)
    #void subrow(entry* v,entry* w,entry* x,index n)
    #boolean pos_subrow(entry* v,entry* w,entry* x,index n)
    matrix* extendmat(matrix* old)
    matrix* copymatrix(matrix* old)
    
    poly* Reduce_pol(poly* p)
    
    # /* static/static1.c */
    matrix* mat_id(entry size)
    lieobj mat_add_mat_vec(lieobj m, lieobj v)
    lieobj mat_add_mat_mat(lieobj m, lieobj v)
    lieobj vec_add_vec_vec(lieobj m, lieobj v)
    
    # /* static/static2.c */
    lieobj vec_addelm_vec_int(lieobj v, lieobj i)
    
    # /* box/static3.c */
    lieobj int_eq_grp_grp(lieobj g, lieobj h) # /* used in decomp */
    
    # from c-helpers/static1.c

    cdef long chunks
    vector* vec_min_vec(vector* a)
    matrix* mat_min_mat(matrix* a)
    vector* vec_mod_vec_int(vector* a, entry b)
    matrix* mat_div_mat_int(matrix* a, entry b)
    matrix* mat_mod_mat_int(matrix* a, entry b)
    vector* vec_mul_int_vec(entry a, vector *b)
    vector* vec_div_vec_int(vector* a, entry b)
    vector* vec_mul_mat_vec(matrix *a, vector *b)
    vector* vec_mul_vec_mat(vector *v, matrix *m)
    vector* vec_append_vec_vec(vector *v, vector *w)
    matrix* mat_mul_mat_mat(matrix *a, matrix *b)
    poly* pol_mul_pol_mat(poly *a, matrix *b)
    matrix* mat_append_mat_mat(matrix* a, matrix* b)
    matrix* mat_transpose_mat(matrix *a) # /* replace with Transpose? */
    index int_mul_vec_vec(vector *a, vector *b)
    lieobj mat_sub_mat_int(lieobj a, entry obj_k)
    vector *vec_dif_vec_vec(vector *a, vector *b)
    matrix* mat_sub_mat_mat(matrix *a, matrix *b)
    matrix* mat_mul_int_mat(entry a, matrix *b)

    # from c-helpers/static2.c

    lieobj int_eq_mat_mat(lieobj a, lieobj b)
    lieobj int_eq_pol_pol(lieobj a, lieobj b)
    lieobj int_ne_mat_mat(lieobj a, lieobj b)
    lieobj int_ne_pol_pol(lieobj a, lieobj b)
    lieobj int_eq_vec_vec(lieobj a, lieobj b)
    lieobj int_ne_vec_vec(lieobj a, lieobj b)
    lieobj vec_startaddelm_int_vec(entry a, lieobj b)
    lieobj vec_subelm_vec_int(lieobj a, entry b)
    lieobj vec_select_mat_int(lieobj m, entry indexobj)
    lieobj vec_select_pol_int(poly *m, entry indexobj)
    lieobj bin_select_pol_vec(poly *p, vector *v)
    lieobj Int_search_mat_vec(matrix* m, vector* v, index low, index up)
    lieobj int_search_mat_vec(matrix *m, vector *v)
    lieobj int_search_mat_vec_int_int(matrix *m, vector *v, entry up, entry low)
    lieobj int_select_mat_int_int(matrix *m, entry n1, entry n2)
    lieobj vec_join_mat(lieobj a)
    lieobj vec_diag_mat(lieobj a)
    poly* pol_monom_vec(vector *v)
    poly* pol_polynom_mat(matrix* p)
    poly* pol_polynom_int(entry k)
    matrix* mat_polynom_pol(poly *p)
    lieobj pol_polynom_bin_vec(bigint *d, vector *v)
    lieobj pol_polynom_vec(vector *v)
    lieobj pol_min_pol(poly	*a)
    lieobj pol_atensor_pol_pol(lieobj p1, lieobj p2)

    lieobj tex_maxsub_grp(group *g)
    group* create_group(string s)
    lieobj grp_maxsub_grp_int(group *g, entry nobj)
    lieobj mat_resmat_grp_grp(group *g1, group *g2)
    lieobj mat_resmat_grp_int_grp(group *g1,entry d, group *g2)

    # from c-helpers/static3.c
